--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -49,7 +49,7 @@
   background: none !important;
   font-weight: bold;
 }
-.active-home {
+.active-home,.active-likes,.active-cart,.active-account {
   color: #d3a892 !important;
 }
 
